--- a/css/global.css
+++ b/css/global.css
@@ -1,23 +1,33 @@
 @charset "utf-8";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
 
 :root {
   font-size: 10px;
+  --default-color: #f5f5f5;
+  --bckg-color: #e1e1e1;
+  --open-btn-color: #2d5e9d;
+  --close-btn-color: #cf0f0f;
 }
 
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body,
 header {
-  background-color: #e1e1e1;
+  padding: 1.6rem;
+  background-color: var(--bckg-color);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 1.6rem;
+}
+
+header {
+  margin-bottom: 1.6rem;
 }
