--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap");
 
 :root {
   font-size: 10px;
@@ -14,7 +14,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body,
@@ -30,4 +30,5 @@ header {
 
 header {
   margin-bottom: 1.6rem;
+  font-size: 1.6rem;
 }
