--- a/css/modal.css
+++ b/css/modal.css
@@ -1,5 +1,12 @@
 @charset "utf-8";
 
+.fade,
+.modal {
+  transition: 0.5s;
+  opacity: 1;
+  pointer-events: all;
+}
+
 .fade {
   width: 100%;
   height: 100%;
@@ -19,6 +26,7 @@
   max-width: 90%;
   border-radius: 0.5rem;
   box-shadow: 0.5px 1px 3px 1px rgba(0, 0, 0, 0.351);
+  transition: 0.5s;
 
   position: fixed;
   top: 50%;
@@ -47,4 +55,10 @@
 .modal.hide,
 .fade.hide {
   opacity: 0;
+  pointer-events: none;
+}
+
+.modal.hide {
+  position: fixed;
+  left: 0;
 }
